manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
    name: documentum
    labels:
      koeppster.net/aws_enabled: "true"
