manifests/testtest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nettools
  namespace: documentum
spec:
  containers:
  - name: nettools
    image: jrecord/nettools:latest
    command:
      - sleep
      - "infinity"
    imagePullPolicy: IfNotPresent
  restartPolicy: Never
