manifests/extbroker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${stackname}-docbroker-ext
  namespace: ${namespace}
spec:
  type: NodePort
  selector:
    app: ${stackname}-server
  ports:
  - nodePort: 30189
    port: ${dm_docbroker_ext_port}
    name: docbroker
    protocol: TCP
    targetPort: ${dm_docbroker_ext_port}
  - port: ${dm_docbroker_ext_portplus}
    nodePort: 30190
    name: docbrokerone
    protocol: TCP
    targetPort: ${dm_docbroker_ext_portplus}
