manifests/gateway.yaml
#
# This gateway watched by k8s_gateway so localnet IPs available via local network
# DNS
#
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: documentum-lan-gateway
  namespace: documentum
  annotations:
    coredns.io/hostname: "demo-server.k8s.koeppster.lan"
spec:
  gatewayClassName: istio
  listeners:
    - name: appserver
      port: 9080
      hostname: "demo-server.k8s.koeppster.lan"
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
  addresses:
  - type: IPAddress
    value: ${dm_docbroker_ext_ip}
