manifests/rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ${stackname}-rest-deployment
  namespace: ${namespace}
  labels:
    app:  ${stackname}-rest
spec:
  selector:
    matchLabels:
      app: ${stackname}-rest
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  ${stackname}-rest
    spec:
      serviceAccountName: ${stackname}-resource-sa
      hostname: ${stackname}-rest
      containers:
      - name:  ${stackname}-rest
        image:  ${dm_rest_image}
        resources:
          limits:
            cpu: 500m
            memory: 1000Mi
        ports:
        - containerPort:  8080
          name:  http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ${stackname}-rest
  namespace: ${namespace}
spec:
  selector:
    app: ${stackname}-rest
  ports:
  - port: 8080
    name: docbroker
    targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${stackname}-rest-route
  namespace: ${namespace}
spec:
  parentRefs:
    - name: koeppster-lan-gateway
      namespace: infrastructure
  hostnames: ["${stackname}-rest.k8s.koeppster.lan"]
  rules:
    - backendRefs:
      - name: ${stackname}-rest
        namespace: ${namespace}
        port: 8080
