manifests/webtop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ${stackname}-webtop-deployment
  namespace: ${namespace}
  labels:
    app:  ${stackname}-webtop
spec:
  selector:
    matchLabels:
      app: ${stackname}-webtop
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  ${stackname}-webtop
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      serviceAccountName: ${stackname}-resource-sa
      hostname: ${stackname}-webtop
      containers:
      - name:  ${stackname}-webtop
        image:  ${dm_webtop_image}
        resources:
          limits:
            cpu: 500m
            memory: 1000Mi
        ports:
        - containerPort:  8080
          name:  http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ${stackname}-webtop
  namespace: ${namespace}
spec:
  selector:
    app: ${stackname}-webtop
  ports:
  - port: 8080
    name: docbroker
    targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${stackname}-webtop-route
  namespace: ${namespace}
spec:
  parentRefs:
    - name: koeppster-lan-gateway
      namespace: infrastructure
  hostnames: ["${stackname}-webtop.k8s.koeppster.lan"]
  rules:
    - backendRefs:
      - name: ${stackname}-webtop
        namespace: ${namespace}
        port: 8080
